--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1> Rock Paper Scissors </h1>
+    <h1> Real Men Do Rock</h1>
   </header>
 
   <div class="score-board">
-    <div id="user-label" class="badge">user</div>
+    <div id="user-label" class="badge">you</div>
     <div id="computer-label"class="badge">realMan</div>
     <span id="user-score">0</span>:<span id="computer-score">0</span>
   </div>
