--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
   </div>
 
   <p class="action-message">Make your move.</p>
-  <a class="action-message" href=https://www.psychologytoday.com/us/blog/the-blame-game/201504/the-surprising-psychology-rock-paper-scissors>Real Men Do Rock.</a>
 
+  <footer>
+    <a class="action-message" href=https://www.psychologytoday.com/us/blog/the-blame-game/201504/the-surprising-psychology-rock-paper-scissors>
+      Real Men Do Rock.
+    </a>
+  </footer>
   <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
