--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
   <footer>
     <a class="action-message" href=https://www.psychologytoday.com/us/blog/the-blame-game/201504/the-surprising-psychology-rock-paper-scissors>
-      Real Men Do Rock.
+      Real Men Do Rock
+    </a>
+    <a class="action-message" href=https://fabien.bessez.com>
+      Fabien Bessez
     </a>
   </footer>
   <script src="app.js" type="text/javascript"></script>
