--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <div class="result">
-    <p>Paper covers Rock. You win!</p>
+    <p>Let's play!</p>
   </div>
 
   <div class="choices">
